--- a/src/App.css
+++ b/src/App.css
@@ -6,8 +6,24 @@
 
 .App {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
+
+.link {
+  text-decoration: none;
+  color: black;
+}
+
+.navLink {
+  color: black;
+  text-decoration: none;
+}
+
+/* .active {
+  text-decoration: underline;
+  color: red;
+} */
 
 .navBar {
 display: flex;
