correct linter errors

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: 'poppins', 'Roboto';
+  font-family: 'poppins', sans-serif;
 }
 
 .App {
